
2017-08-18 Ron Norman <rjn@inglenet.com>
	* common.c: Keep list of all active modules for later free of
	            memory allocated for decimal constants
	* common.c: cob_stop_run issue callbacks to free any decimal memory
	* common.c: cob_module_enter check for Recursive CALL used in the
	            wrong place. Add cob_module_global_enter routine.
	            Check module signature to determine if CALL was COBOL | C
	* common.h: Add cob_module_global_enter routine.
	            Add cob_stmt_exception to cob_global, used to indicate
		    the previos statment has ON EXCEPTION clause.

2017-08-12 Ron Norman <rjn@inglenet.com>
	* common.c: cob_stop_run issue callbacks to free any decimal memory

2017-08-06 Ron Norman <rjn@inglenet.com>
	* fileio.c: fix coding error testing fl->keys

2017-07-07  Edward Hart <edward.dan.hart@gmail.com>

	* common.h (COB_REPORT_*): prevent undefined behaviour caused by 1 << 31
	  and fixed typos.

2017-06-04 Ron Norman <rjn@inglenet.com>
	* common.c: Improved 'cobcrun -r' display for when
	  unsetenv is used in runtime.cfg to show environment variable
	  was removed and runtime.cfg variable was then present

2017-05-31 Ron Norman <rjn@inglenet.com>
	* fileio.c: 
	 For BDB, on OPEN, if the first record in the file has a size
	 larger than the FD has defined then return status 39

2017-05-22  Ron Norman <rjn@inglenet.com>
	* termio.c:
	  pretty_display_numeric updated to handle 
	  SIGN_SEPARATE  TRAILING & LEADING

2017-05-02 Ron Norman <rjn@inglenet.com>
	* common.c,coblocal.h: added 'cob_keycheck' to indicate if INDEXED file
	  keys must match exactly. Default is TRUE
	* fileio.c: 
	  Add code to handle 'keycheck' in IO_filename env var.
	  Added code to indexed_open for C|D|VB-ISAM files to handle keycheck

2017-04-27 Ron Norman <rjn@inglenet.com>
	* move.c: added 'cob_alloc_move' used to copy data for BY VALUE params
	* common.c,common.h: added 'cob_get_hase_name' used to create has value